只控制汽车模块

--- a/.gitignore
+++ b/.gitignore
@@ -6,37 +6,8 @@ print.php
 payment/
 index.php
 haoid.sql
-addons/jing_guanzhu/
-addons/ju_read/
-addons/ju_credit/
-addons/jufeng_wcy/
-addons/jdg_luvwhispers/
-addons/jy_wei/
-addons/lee_tlvoice/
-addons/kim_financial/
-addons/lions_zq/
-addons/junsion_qixiqueqiao/
-addons/lonaking_activity/
-addons/ice_yzmhb/
-addons/lonaking_express/
-addons/hx_stores/
-addons/lxy_buildpro/
-addons/lxy_buscard/
-addons/ice_picwall/
-addons/hx_zhongchou/
-addons/lxy_marry/
-addons/lonaking_niulangfly/
-addons/meepo_begging/
-addons/meepo_fen/
-addons/wdl_gongfumao/
-addons/wdl_daweiwang/
-addons/wdl_hchighguess/
-addons/wdl_daqie/
-addons/wdl_daoguo/
-addons/wdl_luolicome/
-addons/wdl_damao/
-addons/wdl_comeon/
-addons/
+addons/*
+!addons/we7_car/
 framework/
 attachment/
 data/
