--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,10 @@ addons/*
 !addons/ljr_credit/
 !addons/ljr_credit/template/
 !addons/ljr_credit/template/web/
+!addons/ljr_business_order/
+!addons/ljr_business_order/template/
+!addons/ljr_business_order/template/web/
+!addons/ljr_business_order/template/mobile/
 framework/
 attachment/
 data/
